PR14432: Convert stap exit() calls to exceptions

We need the opportunity to clean up after ourselves, for example
removing any temporary directories created.  Calling exit() bypasses our
usual exception/RAII-based cleanups, so don't do that.

* session.h (exit_exception): New, an exception with a custom exit code.
* main.cxx (main): We can simply return here. Also catch exit_exception.
* session.cxx (systemtap_session::usage): Throw an exit_exception.
  (systemtap_session::parse_cmdline): Ditto.
* util.cxx (assert_regexp_match): A runtime_error makes more sense here.